# w2v-bert-emotion-detection

./: pyproject.toml  train.ipynb
